--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/hcho1989/smart-contract-exercise-1#readme",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.1.4",
     "hardhat": "^2.2.1"
   }
 }
