--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
   }
 }
