--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "paths": { "~/*": ["./*"] },
+    "baseUrl": "./",
+    "paths": { "~/*": ["src/*"] },
     "target": "es2018",
     "module": "commonjs",
     "strict": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "outDir": "dist"
   },
